Fixed layout bug

--- a/src/app/components/question/question.component.scss
+++ b/src/app/components/question/question.component.scss
@@ -1,5 +1,5 @@
 #questionContainer {
-  margin-top: 20vh;
+  margin-top: 10vh;
 
   #questionCard {
     text-align: center;
@@ -32,7 +32,7 @@
   }
 
   #answerContainer {
-    margin-top: 10vh;
+    margin-top: 5vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -57,7 +57,7 @@
 
     @media (min-width: 992px) {
       mat-card {
-        width: 970px;
+        width: 700px;
       }
     }
 
@@ -69,9 +69,23 @@
   }
 
   #questionActionsContainer {
-    margin-top: 15vh;
+    margin-top: 5vh;
     display: flex;
     flex-direction: row-reverse;
+  }
+}
+
+@media (min-width: 1200px) {
+  #questionContainer {
+    margin-top: 20vh !important;
+  }
+
+  #answerContainer {
+    margin-top: 10vh !important;
+  }
+
+  #questionActionsContainer{
+    margin-top: 15vh !important;
   }
 }
 
